--- a/DragonPickerBuild/index.html
+++ b/DragonPickerBuild/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/DragonPickerBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/DragonPickerBuild.data.gz",
-        frameworkUrl: buildUrl + "/DragonPickerBuild.framework.js.gz",
-        codeUrl: buildUrl + "/DragonPickerBuild.wasm.gz",
+        dataUrl: buildUrl + "/DragonPickerBuild.data",
+        frameworkUrl: buildUrl + "/DragonPickerBuild.framework.js",
+        codeUrl: buildUrl + "/DragonPickerBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Dragon Picker",
