--- a/DragonPickerYandexBuild/index.html
+++ b/DragonPickerYandexBuild/index.html
@@ -48,9 +48,9 @@
     const buildUrl = "Build";
     const loaderUrl = buildUrl + "/DragonPickerYandexBuild.loader.js";
     const config = {
-        dataUrl: buildUrl + "/DragonPickerYandexBuild.data.gz",
-        frameworkUrl: buildUrl + "/DragonPickerYandexBuild.framework.js.gz",
-        codeUrl: buildUrl + "/DragonPickerYandexBuild.wasm.gz",
+        dataUrl: buildUrl + "/DragonPickerYandexBuild.data",
+        frameworkUrl: buildUrl + "/DragonPickerYandexBuild.framework.js",
+        codeUrl: buildUrl + "/DragonPickerYandexBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Dragon Picker",
